--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ main {
       left: 50%;
 	    margin-left: -50vw;
 	    margin-right: -50vw;
-	    max-width: 99.56vw;
+	    max-width: 100vw;
 	    position: relative;
 	    right: 50%;
       
@@ -251,6 +251,7 @@ main {
 
     main {
       padding:1.5rem;
+      width: 100%;
     }
 
     div.about {
