--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ body {
     color: #595959;
     line-height: 125%;
     display: inline;
+    min-height: 100vh;
+
   }
 
 
@@ -113,9 +115,29 @@ main {
     padding-left: 6rem;
     padding-right: 6rem;
     padding-bottom: 3rem;
+    
     /* padding is inside element */
   }
+  div.afooter1 {
+    display: inline-block;
+    position: fixed;
+    bottom: 1rem;
+  }
+  div.afooter2 {
+    display: inline-block;
+    position: fixed;
+    bottom: 1rem;
+    right: 6rem;
+  }
 
+  div.footer1 {
+    display: inline-block;
+    padding-left: 6rem;
+    width: 72.5%;
+  }
+  div.footer2 {
+    display: inline-block;
+  }
   nav {
     /* background: #87ceeb; */
     position: fixed;
@@ -233,13 +255,6 @@ main {
 
   .widget a {
     padding-right: 2rem;
-  }
-
-  footer {
-    left: 6rem;
-    position: relative;
-    bottom: 2rem;
-    height: 3rem;
   }
 
   .youtube-video {
@@ -377,5 +392,11 @@ main {
       margin: 0;
       max-width: 100%;
     }
+  
+    div.footer1 {
+      display: inline-block;
+      padding-left: 1.5rem;
+    }
+    
   
   }
