--- a/style.css
+++ b/style.css
@@ -199,6 +199,15 @@ main {
       max-width: 100%;
     }
 
+    img.meat2 {
+      display: block;
+      max-width: 100%;
+      height: 500px;
+      margin-bottom: 1rem;
+
+    }
+
+
     img.profile {
       max-width: 20vh;
       display: inline-block;
@@ -212,6 +221,13 @@ main {
 
     div.meat {
       max-width: 41rem;
+    }
+
+    div.meat2 {
+      column-count: 2;
+      column-gap: none;
+      margin: 0;
+      max-width: 100%;
     }
 
 
@@ -241,6 +257,7 @@ main {
 
      div.about {
       max-width: 70vh;
+      display: inline-block;
 
      }
 
@@ -284,9 +301,6 @@ main {
 
     main {
       padding:1.5rem;
-    }
-
-    div.about {
     }
 
     nav ul li {
