--- a/style.css
+++ b/style.css
@@ -68,14 +68,24 @@ a:link {
     color: #595959;
   }
 
-h1 {
-    font-family: "Press Start 2p", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 30px;
-    color: #595959;
-    line-height: 120%;
-  }
+
+
+
+
+  @font-face{
+    font-family: 'NeueBit';
+    src: url('PPNeueBit-Bold.otf') format('truetype');
+    font-weight: 700;
+ }
+
+ h1 {
+  font-family: "Press Start 2p", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 30px;
+  color: #595959;
+  line-height: 120%;
+}
 
 h2 {
     font-family: "Press Start 2p", sans-serif;
@@ -91,7 +101,7 @@ h3 {
     font-weight: 400;
     font-style: normal;
     font-size: 15px;
-    color: #B3B3B3;
+    color: #595959;
     display: inline;
   }
 
@@ -140,11 +150,13 @@ main {
 
   nav ul li {
     display: inline-block;
+    padding-right: 5rem;
+
   }
 
-  nav a {
+  /* nav a {
     padding-right: 5rem;
-  }
+  } */
 
   div.fixbr {
     height: 25vh;
