--- a/style.css
+++ b/style.css
@@ -244,7 +244,6 @@ main {
       max-width: 100%;
     }
 
-
    
     div.thumbnail-description {
     max-width: 40vh;
@@ -299,7 +298,7 @@ main {
 
   img.more {
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
     margin-bottom: 1rem;
   }
@@ -310,6 +309,21 @@ main {
     margin: 0;
     max-width: 100%;
   }
+
+  div.bigmore {
+    column-count: 1;
+    column-gap: none;
+    margin: 0;
+    max-width: 100%;
+  }
+  
+  div.smallmore {
+    column-count: 2;
+    column-gap: none;
+    margin: 0;
+    max-width: 100%;
+  }
+
 /* mobile adjustments begin here: */
   @media screen and (max-width: 600px) {
 
