--- a/style.css
+++ b/style.css
@@ -389,6 +389,38 @@ main {
     max-width: 100%;
   }
 
+  /* laptop adjustments */
+
+  @media screen and (max-width:1500px) {
+  
+    h1 {
+      font-family: "offbit", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 35px;
+      color: #5CBBFF;
+      line-height: 110%;
+    }
+
+    nav {
+      margin-right: 10rem;
+      position: fixed;
+  
+    }
+    
+
+    h3 {
+      font-family: "arial", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 25px;
+      color: #FF51CC;
+      display: inline;
+      line-height: 150%;
+  }
+  
+  }
+
 /* mobile adjustments begin here: */
   @media screen and (max-width: 600px) {
 
