--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h2 {
     font-weight: 400;
     font-style: normal;
     font-size: 100px;
-    color: black;
+    color: #5CBBFF;
     line-height: 100%;
   }
 
@@ -156,9 +156,9 @@ h4 {
   font-weight: 400;
   font-style: italic;
   font-size: 18px;
-  color:;
+  color: 
   display: inline;
-  line-height: 100%;
+  line-height: 120%;
 }
 
 h7 {
@@ -166,8 +166,8 @@ h7 {
   font-weight: 400;
   font-style: bold;
   font-size: 75px;
-  color: black;
-  line-height: 110%;
+  color: #5CBBFF;
+  line-height: 100%;
 }
 
 h8 {
@@ -175,7 +175,7 @@ h8 {
   font-weight: 400;
   font-style: normal;
   font-size: 25px;
-  color: black;
+  color: #757575;
   line-height: 125%;
   display: inline;
   min-height: 100vh;
@@ -358,7 +358,8 @@ main {
 
     div.welcome-box1 {
       flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 60%;
+      max-width: 40%;
+      padding-right: 5rem;;
     }
     div.welcome-box2 {
       flex: 5; /* Each box will grow equally to fill available space */
@@ -487,6 +488,10 @@ main {
   
     }
     
+    main {
+      padding-left: 10rem;
+      padding-right: 10rem;
+    }
 
     h3 {
       font-weight: 400;
@@ -494,11 +499,29 @@ main {
       font-size: 25px;
       display: inline;
       line-height: 150%;
+    }
+
+    h8 {
+      font-size: 22px;
+    }
+
+    h7 {
+      font-size: 65px;
+    }
+
+  div.welcome-box1 {
+    flex: 5; /* Each box will grow equally to fill available space */
+    max-width: 45%;
   }
+  div.welcome-box2 {
+    flex: 5; /* Each box will grow equally to fill available space */
+    max-width: 55%;
+  }
+
   
   }
 
-  @media screen and (max-width:1400px) {
+  @media screen and (max-width:1500px) {
   
     h1 {
       font-family: "offbit", sans-serif;
@@ -514,6 +537,18 @@ main {
   
     }
 
+    main {
+      padding-left: 6rem;
+      padding-right: 6rem;
+    }
+
+    h8 {
+      font-size: 20px;
+    }
+    
+    h7 {
+      font-size: 60px;
+    }
   
   }
 
