--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h2 {
     font-style: normal;
     font-size: 100px;
     color: #5CBBFF;
-    line-height: 100%;
+    line-height: 95%;
   }
 
 h3 {
@@ -365,6 +365,17 @@ main {
       flex: 5; /* Each box will grow equally to fill available space */
       max-width: 42%;
     }
+
+    div.content-box1 {
+      flex: 5; /* Each box will grow equally to fill available space */
+      max-width: 50%;
+      padding-right: 3rem;;
+    }
+    div.content-box1 {
+      flex: 5; /* Each box will grow equally to fill available space */
+      max-width: 50%;
+    }
+
 
     div.facts-container {
       display: flex;
