--- a/style.css
+++ b/style.css
@@ -133,12 +133,12 @@ a:link {
 }
 
 h2 {
-    font-family: "offbit", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 100px;
-    color: #5CBBFF;
-    line-height: 95%;
+  font-family: "offbit", sans-serif;
+  font-weight: 400;
+  font-style: bold;
+  font-size: 75px;
+  color: #5CBBFF;
+  line-height: 98%;
   }
 
 h3 {
@@ -161,14 +161,7 @@ h4 {
   line-height: 120%;
 }
 
-h7 {
-  font-family: "offbit", sans-serif;
-  font-weight: 400;
-  font-style: bold;
-  font-size: 75px;
-  color: #5CBBFF;
-  line-height: 100%;
-}
+
 
 h8 {
   font-family: "ppmori-regular", sans-serif;
@@ -356,6 +349,12 @@ main {
       display: inline-block;
     }
 
+    img.full-content {
+      max-width: 100%;
+      height: auto;
+    }
+
+
     div.welcome-box1 {
       flex: 5; /* Each box will grow equally to fill available space */
       max-width: 40%;
@@ -366,15 +365,17 @@ main {
       max-width: 42%;
     }
 
-    div.content-box1 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      padding-right: 3rem;;
+    div.content-box {
+      flex: 1; /* Each box will grow equally to fill available space */
+      overflow: hidden;
     }
-    div.content-box1 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
+
+    .inner-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* Adjust to 'contain' if you want to fit the image inside */
     }
+    
 
 
     div.facts-container {
@@ -419,6 +420,14 @@ main {
       display: flex;
       justify-content: space-between; /* Distributes space between flex items */
       box-sizing: border-box;
+    }
+
+    div.container-2{
+      display: flex;
+      justify-content: space-between; /* Distributes space between flex items */
+      box-sizing: border-box;
+      gap: 20px; /* Adjust gap size as needed */
+      width: 100%; /* Or a fixed width */
     }
 
     /* div.welcome-fact {
@@ -673,6 +682,7 @@ main {
 
     div.gallery {
       display: block;
+      
     }
 
     div.thumbnail-description {
