last fix to about, now more process

--- a/style.css
+++ b/style.css
@@ -254,6 +254,14 @@ main {
 
   }
 
+  /* iframe.project {
+    max-height: 70vw;
+    max-width: 60vw;
+    display: block;
+    margin: auto;
+
+  } */
+
   img.smol {
     max-width: 100px;
     height: auto;
