--- a/style.css
+++ b/style.css
@@ -542,12 +542,12 @@ main {
     div.welcome-box1 {
       flex: 5; /* Each box will grow equally to fill available space */
       max-width: 50%;
-      padding-right: 3rem;
+      padding-right: 1rem;
     }
     div.welcome-box2 {
       flex: 5; /* Each box will grow equally to fill available space */
       max-width: 50%;
-      margin-right: 
+      margin-right: 0;
 
 
     }
