--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, img {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -53,173 +53,146 @@ table {
 
 /* Start of type-specific styles */
 
-a:link {
-    color: #B9E2FF;
-    text-decoration: none;
-    text-decoration: ;
-    -webkit-transition: all .15s ease;
-    -moz-transition: all .15s ease;
-    -o-transition: all .15s ease;
-    transition: all .15s ease; 
-    letter-spacing:   -1px;
+  a:link {
+      color: #B9E2FF;
+      text-decoration: none;
+      text-decoration: ;
+      -webkit-transition: all .15s ease;
+      -moz-transition: all .15s ease;
+      -o-transition: all .15s ease;
+      transition: all .15s ease; 
+      letter-spacing:   -1px;
+    }
+
+    a:visited {
+      color: #B9E2FF;
+    }
+
+    a:hover {
+      color: #FF51CC;
+      /* text-decoration: underline; */
+      text-decoration-color: #FF51CC;
+      letter-spacing:  normal;
+    }
+
+    a:active {
+      color: #B9E2FF;
+    }
+
+    a.message:link {
+      color: #B9E2FF;
+    }
 
 
+    @font-face {
+      font-family: "offbit";
+      src: url("fonts/OffBit-101Bold.woff2") format('woff2');
+      font-weight: bold;
+    }
+
+    @font-face {
+      font-family: "offdot";
+      src: url("fonts/OffBit-DotBold.woff2") format('woff2');
+      font-weight: bold;
+    }
+    
+    @font-face {
+      font-family: "offdot";
+      src: url("fonts/OffBit-DotBold.woff2") format('woff2');
+      font-weight: bold;
+    }
+    
+    @font-face {
+      font-family: 'ppmori-regular';
+      src: url('fonts/PPMori-Regular.woff2') format('woff2');
+      font-weight: 100;
   }
-
-  a:visited {
-    color: #B9E2FF;
-  }
-
-  a:hover {
-    color: #FF51CC;
-    /* text-decoration: underline; */
-    text-decoration-color: #FF51CC;
-    letter-spacing:  normal;
-  }
-
-  a:active {
-    color: #B9E2FF;
-  }
-
-  a.message:link {
-    color: #B9E2FF;
-  }
-
 
   @font-face {
-    font-family: "offbit";
-    src: url("fonts/OffBit-101Bold.woff2") format('woff2');
-    font-weight: bold;
-  }
-
-  @font-face {
-    font-family: "offdot";
-    src: url("fonts/OffBit-DotBold.woff2") format('woff2');
-    font-weight: bold;
-  }
-  
-  @font-face {
-    font-family: "offdot";
-    src: url("fonts/OffBit-DotBold.woff2") format('woff2');
-    font-weight: bold;
-  }
-  
-  @font-face {
-    font-family: 'ppmori-regular';
-    src: url('fonts/PPMori-Regular.woff2') format('woff2');
+    font-family: 'ppmori-regular-italic';
+    src: url('fonts/PPMori-RegularItalic.woff2') format('woff2');
     font-weight: 100;
- }
-
- @font-face {
-  font-family: 'ppmori-regular-italic';
-  src: url('fonts/PPMori-RegularItalic.woff2') format('woff2');
-  font-weight: 100;
-}
-
-@font-face {
-  font-family: 'ppmori-bold';
-  src: url('fonts/PPMori-Bold.woff2') format('woff2');
-  font-weight: 100;
-}
-
-
- h1 {
-  font-family: "offbit", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 50px;
-  color: #5CBBFF;
-  line-height: 110%;
-}
-
-h2 {
-  font-family: "offbit", sans-serif;
-  font-weight: 400;
-  font-style: bold;
-  font-size: 75px;
-  color: #5CBBFF;
-  line-height: 98%;
   }
 
-h3 {
+  @font-face {
+    font-family: 'ppmori-bold';
+    src: url('fonts/PPMori-Bold.woff2') format('woff2');
+    font-weight: 100;
+  }
+
+  h1 {
+    font-family: "offbit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 50px;
+    color: #5CBBFF;
+    line-height: 110%;
+  }
+
+  h2 {
     font-family: "ppmori-bold", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 25px;
-    color: ;
     display: inline;
     line-height: 150%;
-}
+  }
 
-h4 {
-  font-family: "ppmori-regular-italic", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-  font-size: 18px;
-  color: 
-  display: inline;
-  line-height: 120%;
-}
+  h3 {
+    font-family: "ppmori-regular-italic", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 18px;
+    display: inline;
+    line-height: 120%;
+  }
 
-
-
-h8 {
-  font-family: "ppmori-regular", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 25px;
-  line-height: 125%;
-  display: inline;
-  min-height: 100vh;
-
-}
-body {
+  h4 {
     font-family: "ppmori-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 18px;
-    color: black;
+    font-size: 25px;
     line-height: 125%;
     display: inline;
     min-height: 100vh;
-
   }
+
+  body {
+      font-family: "ppmori-regular", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 18px;
+      color: black;
+      line-height: 125%;
+      display: inline;
+      min-height: 100vh;
+    }
 /* end of type-specific styles. */
 
 
+/* universal containers */
 main {
     backdrop-filter: blur(2.5px);
-    /* margin is outside element */
     margin-top: 0rem;
     padding-left: 14.5rem;
     padding-right: 14.5rem;
     margin-bottom: 3rem;
     position: relative;
     z-index: 2;
-    background-color: ;
-    /* pointer-events: none; */
-    
-    /* padding is inside element */
   }
-
  
   header {
-    
     padding-left: 2.5rem;
     padding-right: 2rem;
     padding-bottom: 3rem;
-   
   }
 
   nav {
     padding-left: 12rem;
     padding-top: 2rem;
-
     max-width: 80%;
     position: fixed;
     z-index: ;
-
-
   }
 
   nav_project {
@@ -227,79 +200,145 @@ main {
     max-width: 80%;
     position: fixed;
     z-index: 3;
-
   }
 
-  div.index-gallery {
-    max-width: auto;
-    
-   max-height: 40vw;
-    text-align: center;
-    
+  footer {
+    left: 1.5rem;
+    position: relative;
+    bottom: 2rem;
+  }
+/* base containers end */
+
+
+/* Image/video containers */
+img.project {
+  max-height: 40vw;
+  max-width: 60vw;
+  display: block;
+  margin: auto;
+}
+
+div.dion-walking {
+  max-width: auto;
+  bottom: 0;
+  max-height: 40vw;
+  text-align: center;
+}
+
+img.smol {
+  max-width: 100px;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+
+img.full-content {
+  max-width: 100%;
+  height: auto;
+}
+
+  img.welcome {
+    left: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    position: relative;
+    right: 50%;
   }
 
-  div.dion-walking {
-    max-width: auto;
-    bottom: 0;
-   max-height: 40vw;
-    text-align: center;
-    
-  }
-
-  img.project {
-    max-height: 40vw;
-    max-width: 60vw;
+  img.more {
     display: block;
-    margin: auto;
-
+    width: 100%;
+    height: auto;
   }
 
-  /* iframe.project {
-    max-height: 70vw;
-    max-width: 60vw;
-    display: block;
-    margin: auto;
+  .youtube-video {
+    aspect-ratio: 16/9;
+    width: 100%;
+  }
 
+  video {
+    object-fit: fill;
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
+  /* .inner-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Adjust to 'contain' if you want to fit the image inside */
+
+  /* img.profile {
+  max-width: 20vh;
+  display: inline-block;
+} */
+
+  /* img.thumbnail {
+  max-width: 75%;
+  height: auto;
+  margin-right: 1rem;
+  }  */
+
+  /* img.meat {
+    max-width: 100%;
+  }
+
+  img.meat2 {
+    display: block;
+    max-width: 100%;
+    height: 500px;
+    margin-bottom: 1rem;
   } */
 
-  img.smol {
-    max-width: 100px;
-    height: auto;
-    display: block;
-    margin: auto;
+  /* Image/video containers end */
 
-  }
 
+ 
+  
+/* Index containers */
     div.project-descriptions {
     text-align: center;
     text-justify: inter-word;
     display: block;
     margin: auto;
     }
+/* Index container end */
 
-  
-  
-/////
 
-  div.footer1 {
-    max-width: auto;
-    text-align: center;
-    
-  }
-  /* nav a {
-    padding-right: 5rem;
-  } */
+/* Gallery containers */
+div.smallmore {
+  column-count: 2;
+  column-gap: none;
+  margin: 0;
+  max-width: 100%;
+}
 
-  div.fixbr {
-    height: 25vh;
-  }
+div.welcome-container {
+  display: flex;
+  justify-content: space-between; /* Distributes space between flex items */
+  box-sizing: border-box;
+}
 
+div.welcome-box1 {
+  flex: 5; 
+  max-width: 50%;
+  padding-right: 5rem;
+}
+
+div.welcome-box2 {
+  flex: 5; /* Each box will grow equally to fill available space */
+  max-width: 50%;
+  margin-right: 4rem;
+}
+/* Gallery container end */
+
+
+/* All br's */
   div.hugebr {
     height: 25vh;
     pointer-events: none;
-
   }
-  
 
   div.bigbr {
     height: 5rem;
@@ -309,212 +348,11 @@ main {
   div.smallbr {
     height: 1rem;
   }
-
-  div.tinybr {
-    height: .5rem;
-  }
-
-  div.thumbnail-br {
-    height: 5rem;
-  }
+/* End of br's */
   
 
-  div.gallery {
-    display: flex;
-    align-items: left;
-  }
 
-    img.thumbnail {
-    max-width: 75%;
-    height: auto;
-    margin-right: 1rem;
-
-    }
-
-    img.welcome {
-      left: 50%;
-	    margin-left: -50vw;
-	    margin-right: -50vw;
-	    max-width: 100vw;
-	    position: relative;
-	    right: 50%;
-      
-    }
-
-    img.meat {
-      max-width: 100%;
-    }
-
-    
-
-    img.meat2 {
-      display: block;
-      max-width: 100%;
-      height: 500px;
-      margin-bottom: 1rem;
-
-    }
-
-
-    img.profile {
-      max-width: 20vh;
-      display: inline-block;
-    }
-
-    img.full-content {
-      max-width: 100%;
-      height: auto;
-    }
-
-
-    div.welcome-box1 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      padding-right: 5rem;
-    }
-    div.welcome-box2 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      margin-right: 4rem;
-
-
-    }
-
-    div.welcome-boxa1 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      padding-right: 5rem;
-    }
-    div.welcome-boxa2 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      margin-right: 8rem;
-
-
-    }
-
-    div.content-box {
-      flex: 1; /* Each box will grow equally to fill available space */
-      overflow: hidden;
-    }
-
-    .inner-box img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* Adjust to 'contain' if you want to fit the image inside */
-    }
-    
-
-
-    div.facts-container {
-      display: flex;
-      justify-content: space-between; /* Distribute space between the text boxes */
-    }
-
-    div.facts {
-      flex: 1; /* Make each text box take up equal space */
-    }
-    
-
-
-
-    div.meat {
-      max-width: 41rem;
-    }
-
-    div.meat2 {
-      column-count: 2;
-      column-gap: none;
-      margin: 0;
-      max-width: 100%;
-    }
-
-   
-    div.thumbnail-description {
-    max-width: 40vh;
-    }
-
-    /* a.miyamoto-anchor :hover {
-        color: red;
-        text-decoration: underline;
-      }
-      a.spoken-anchor :hover {
-        color: #D5A52E;
-        text-decoration: underline;
-      }
-     */
-
-    div.welcome-container {
-      display: flex;
-      justify-content: space-between; /* Distributes space between flex items */
-      box-sizing: border-box;
-    }
-
-   
-
-     div.about {
-      max-width: 70vh;
-      display: inline-block;
-
-     }
-
-     b.italic {
-      font-style: italic;
-     }
-  
-  .widget ul li {
-    display: inline-block
-  }
-
-  .widget a {
-    padding-right: 2rem;
-  }
-
-  .youtube-video {
-    aspect-ratio: 16/9;
-    width: 100%;
-  }
-
-  .stuffs {
-    position: absolute;
-    left: 46.5%;
-  }
-
-  img.more {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-
-  div.more {
-    column-count: 3;
-    column-gap: none;
-    margin: 0;
-    max-width: 100%;
-  }
-
-  div.bigmore {
-    column-count: 1;
-    column-gap: none;
-    margin: 0;
-    max-width: 100%;
-  }
-
-  div.smallmore {
-    column-count: 2;
-    column-gap: none;
-    margin: 0;
-    max-width: 100%;
-  }
-
-  video {
-        /* Makes the video fill the full height of the container */
-    object-fit: fill;
-    display: block;
-      max-width: 100%;
-      height: auto;
-  }
-
+ 
   /* laptop adjustments */
 
   @media screen and (max-width:1700px) {
@@ -546,7 +384,7 @@ main {
     h3 {
       font-weight: 400;
       font-style: normal;
-      font-size: 25px;
+      font-size: 18px;
       display: inline;
       line-height: 150%;
     }
@@ -704,8 +542,13 @@ main {
       height: 3rem;
     }
     
-    img.arrow {
-      max-width: 1rem;
+    img.project {
+      max-width: 100%;
+      max-height: 100%;
+      height: auto;
+      max-height: ;
+      display: block;
+      margin: 0 auto;
     }
 
     
