--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ main {
   }
  
   header {
-    padding-left: 2.5rem;
-    padding-right: 2rem;
+    margin-left: 2.5rem;
+    margin-right: 2rem;
     padding-bottom: 3rem;
   }
 
@@ -495,6 +495,45 @@ div.welcome-box2 {
       padding:1.5rem;
     }
 
+    img.project {
+      max-width: 100%;
+      max-height: 100%;
+      height: auto;
+      max-height: ;
+      display: block;
+      margin: 0 auto;
+    }
+
+    nav_project {
+      padding-top: 1rem 0;
+      width: 100%;
+      position: fixed;
+      z-index: 3;
+      background-color: white;
+      padding-bottom: 1%;
+      border-width: 0;
+      border-bottom-width: 1px;
+      border-style: solid;
+      border-color:#5CBBFF;
+      margin: 0;
+      box-sizing: border-box;
+      margin-left: 0;
+      margin-right: 0;
+      padding-bottom: 0;
+      padding-right: 0;
+      padding-left: 2rem;
+    }
+  
+    header {
+      margin-left: 0;
+      margin-right: 0;
+      padding-bottom: 0;
+      padding-left: 0rem;
+    }
+  
+
+    /* end of 12182024 edits */
+
     nav {
      max-width: 1-00%
     }
@@ -542,15 +581,7 @@ div.welcome-box2 {
       height: 3rem;
     }
     
-    img.project {
-      max-width: 100%;
-      max-height: 100%;
-      height: auto;
-      max-height: ;
-      display: block;
-      margin: 0 auto;
-    }
-
+    
     
     img.thumbnail {
       max-width: 100%;
