--- a/style.css
+++ b/style.css
@@ -535,6 +535,48 @@ div.welcome-box2 {
     h1 {
       font-size: 18pt;
     }
+    
+    h2 {
+      font-family: "ppmori-bold", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 20px;
+      display: inline;
+      line-height: 150%;
+    }
+  
+    footer {
+      position: relative;
+      width: 100%;
+      bottom: 2rem;
+      padding:1.5rem;
+
+    }
+
+    a:link {
+      color: #FFA4E4;
+      text-decoration: none;
+    }
+
+    a:visited {
+      color: #FFA4E4;
+    }
+
+    a:hover {
+      color: #FFA4E4;
+      /* text-decoration: underline; */
+      text-decoration-color: #FFA4E4;
+      letter-spacing:  normal;
+    }
+
+    a:active {
+      color: #FFA4E4;
+    }
+
+    a.message:link {
+      color: #FFA4E4;
+    }
+
   
 
     /* end of 12182024 edits */
@@ -543,10 +585,7 @@ div.welcome-box2 {
 
     
 
-    h2 {
-      font-size: 25pt;
-    }
-
+   
     h3 {
       font-size: 8pt;
     }
@@ -610,11 +649,7 @@ div.welcome-box2 {
     .br {
       display: none;
     }
-    footer {
-      left: 1.5rem;
-      position: relative;
-      bottom: 2rem;
-    }
+  
     
     div.welcome-description: {
       margin-right: none;
@@ -644,15 +679,7 @@ div.welcome-box2 {
       max-width: 100%;
     }
   
-    div.footer1 {
-      display: inline-block;
-      padding-left: 1.5rem;
-    }
-  
-    div.afooter1 {
-      bottom: 1rem;
-    }
-
+    
     div.smallmore {
       column-count: 1;
       column-gap: none;
