--- a/style.css
+++ b/style.css
@@ -215,7 +215,6 @@ main {
   }
 
   footer {
-    left: 1.5rem;
     position: relative;
     bottom: 2rem;
   }
@@ -516,6 +515,9 @@ div.welcome-box2 {
 /* mobile adjustments begin here: */
   @media screen and (max-width: 600px) {
 
+
+  
+
     main {
       padding:1.5rem;
     }
@@ -528,6 +530,19 @@ div.welcome-box2 {
       display: block;
       margin: 0 auto;
     }
+
+    img.welcome {
+      
+      max-width: 100%;
+      height: auto;
+      left: 0;
+      right: 0;
+      margin: 0;
+      margin-top: 3.5rem;
+
+    }
+
+
 
     nav_project {
       padding-top: .75rem;
@@ -586,6 +601,16 @@ div.welcome-box2 {
       line-height: 120%;
     }
 
+    h4 {
+      font-family: "ppmori-regular", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 18px;
+      line-height: 125%;
+      display: inline;
+      min-height: 100vh;
+    }
+
     h5 {
       font-family: "offbit", sans-serif;
       font-weight: 400;
@@ -596,11 +621,11 @@ div.welcome-box2 {
     }
   
     footer {
-      position: relative;
       width: calc(100% - 3rem);
-      bottom: 2rem;
-      padding: 2rem 0;
-      margin: 0 auto;
+      margin: 0 auto; /* Centers the element */
+      padding-bottom: 0;
+      position: relative;
+      overflow: hidden;
       box-sizing: border-box;
 
     }
@@ -661,7 +686,33 @@ div.welcome-box2 {
       height: 0;
       display: inline; 
     }
+
+    div.welcome-container {
+      display: block;
+      justify-content: space-between; /* Distributes space between flex items */
+      box-sizing: border-box;
+    }
+    
+
+    div.welcome-box1 {
+      flex: 5; /* Each box will grow equally to fill available space */
+      max-width: 100%;
+      padding-right: 0;
+    }
+    div.welcome-box2 {
+      flex: 5; /* Each box will grow equally to fill available space */
+      max-width: 100%;
+      margin-right: 0;
+
+
+    }
   
+
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
+
   
 
     /* end of 12182024 edits */
