--- a/style.css
+++ b/style.css
@@ -512,37 +512,95 @@ div.welcome-box2 {
   
   }
 
-/* mobile adjustments begin here: */
+/* MOBILE ADJUSTMENTS START HERE: */
   @media screen and (max-width: 600px) {
 
 
   
+/* TYPE ADJUSTMENTS */
+  h1 {
+    font-size: 20pt;
+  }
 
+  h2 {
+    font-family: "ppmori-bold", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    display: inline;
+    line-height: 150%;
+  }
+
+  h3 {
+    font-family: "ppmori-regular", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    display: inline;
+    line-height: 120%;
+  }
+
+  h4 {
+    font-family: "ppmori-regular", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 125%;
+    display: inline;
+    min-height: 100vh;
+  }
+
+  h5 {
+    font-family: "offbit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 35px;
+    color: #5CBBFF;
+    line-height: 110%;
+  }
+
+  a:link {
+    color: #5CBBFF;
+    text-decoration: underline;
+    text-decoration-color: #B9E2FF;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    transition: none; 
+    letter-spacing: 0;
+  }
+
+  a:visited {
+    color: #5CBBFF;
+    text-decoration: underline;
+    text-decoration-color: #B9E2FF;
+  }
+
+  a:hover {
+    color: #5CBBFF;
+    /* text-decoration: underline; */
+    text-decoration-color: #5CBBFF;
+    letter-spacing:  normal;
+  }
+
+  a:active {
+    color: #5CBBFF;
+    text-decoration: underline;
+    text-decoration-color: #B9E2FF;
+  }
+
+  a.message:link {
+    color: #5CBBFF;
+    text-decoration: underline;
+    text-decoration-color: #B9E2FF;
+  }
+
+
+
+/* CONTAINTER ADJUSTMENTS */
     main {
       padding:1.5rem;
     }
-
-    img.project {
-      max-width: 100%;
-      max-height: 100%;
-      height: auto;
-      max-height: ;
-      display: block;
-      margin: 0 auto;
-    }
-
-    img.welcome {
-      
-      max-width: 100%;
-      height: auto;
-      left: 0;
-      right: 0;
-      margin: 0;
-      margin-top: 3.5rem;
-
-    }
-
-
 
     nav_project {
       padding-top: .75rem;
@@ -559,7 +617,7 @@ div.welcome-box2 {
       border-color:#5CBBFF;
       box-sizing: border-box;
     }
-  
+
     header {
       margin-left: 1.5rem;
       margin-right: 1.5rem;
@@ -574,52 +632,8 @@ div.welcome-box2 {
       margin-top: 4rem;
       padding-left: 0;
       width: calc(100% - 7.8rem); /* Adjust width based on the margin (left and right) */
-
-      
     }
 
-
-    h1 {
-      font-size: 20pt;
-    }
-    
-    h2 {
-      font-family: "ppmori-bold", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 18px;
-      display: inline;
-      line-height: 150%;
-    }
-
-    h3 {
-      font-family: "ppmori-regular", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 14px;
-      display: inline;
-      line-height: 120%;
-    }
-
-    h4 {
-      font-family: "ppmori-regular", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 18px;
-      line-height: 125%;
-      display: inline;
-      min-height: 100vh;
-    }
-
-    h5 {
-      font-family: "offbit", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 35px;
-      color: #5CBBFF;
-      line-height: 110%;
-    }
-  
     footer {
       width: calc(100% - 3rem);
       margin: 0 auto; /* Centers the element */
@@ -627,47 +641,27 @@ div.welcome-box2 {
       position: relative;
       overflow: hidden;
       box-sizing: border-box;
-
     }
 
-    
-    a:link {
-      color: #5CBBFF;
-      text-decoration: underline;
-      text-decoration-color: #B9E2FF;
-      -webkit-transition: none;
-      -moz-transition: none;
-      -o-transition: none;
-      transition: none; 
-      letter-spacing: 0;
+    div.welcome-container {
+      display: block;
+      justify-content: space-between; /* Distributes space between flex items */
+      box-sizing: border-box;
     }
 
-    a:visited {
-      color: #5CBBFF;
-      text-decoration: underline;
-      text-decoration-color: #B9E2FF;
+    div.welcome-box1 {
+      flex: 5; /* Each box will grow equally to fill available space */
+      max-width: 100%;
+      padding-right: 0;
     }
-
-    a:hover {
-      color: #5CBBFF;
-      /* text-decoration: underline; */
-      text-decoration-color: #5CBBFF;
-      letter-spacing:  normal;
+    div.welcome-box2 {
+      flex: 5; /* Each box will grow equally to fill available space */
+      max-width: 100%;
+      margin-right: 0;
     }
+  
 
-    a:active {
-      color: #5CBBFF;
-      text-decoration: underline;
-      text-decoration-color: #B9E2FF;
-    }
-
-    a.message:link {
-      color: #5CBBFF;
-      text-decoration: underline;
-      text-decoration-color: #B9E2FF;
-    }
-
-
+/* BREAK ADJUSTMENTS */
     div.hugebr {
       height: 10vh;
     }
@@ -687,32 +681,24 @@ div.welcome-box2 {
       display: inline; 
     }
 
-    div.welcome-container {
+/* IMAGE ADJUSTMENTS */
+    img.project {
+      max-width: 100%;
+      max-height: 100%;
+      height: auto;
+      max-height: ;
       display: block;
-      justify-content: space-between; /* Distributes space between flex items */
-      box-sizing: border-box;
+      margin: 0 auto;
     }
-    
 
-    div.welcome-box1 {
-      flex: 5; /* Each box will grow equally to fill available space */
+    img.welcome {
       max-width: 100%;
-      padding-right: 0;
+      height: auto;
+      left: 0;
+      right: 0;
+      margin: 0;
+      margin-top: 3.5rem;
     }
-    div.welcome-box2 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 100%;
-      margin-right: 0;
-
-
-    }
-  
-
-    display: block;
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 1rem;
-
   
 
     /* end of 12182024 edits */
