--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ table {
     font-style: normal;
     font-size: 18px;
     display: inline;
-    line-height: 120%;
+    line-height: 125%;
   }
 
 
@@ -180,6 +180,17 @@ table {
       font-family: "ppmori-regular", sans-serif;
       font-weight: 400;
       font-style: normal;
+      font-size: 18px;
+      color: black;
+      line-height: 125%;
+      display: inline;
+      min-height: 100vh;
+    }
+
+    bold {
+      font-family: "ppmori-bold", sans-serif;
+      font-weight: 800;
+      font-style: bold;
       font-size: 18px;
       color: black;
       line-height: 125%;
@@ -341,15 +352,25 @@ div.welcome-container {
 }
 
 div.welcome-box1 {
-  flex: 5; 
+  flex: 2; 
   max-width: 50%;
   padding-right: 5rem;
 }
 
 div.welcome-box2 {
-  flex: 5; /* Each box will grow equally to fill available space */
+  flex: 2; /* Each box will grow equally to fill available space */
   max-width: 50%;
   margin-right: 4rem;
+}
+
+.quick-facts_outer-container {
+  display: flex;
+}
+.quick-facts_container {
+  flex: 1;
+  max-width: 33%;
+  text-align: left;
+  /* border: 1px solid #000; */
 }
 /* Gallery container end */
 
@@ -418,7 +439,7 @@ div.welcome-box2 {
       font-style: normal;
       font-size: 18px;
       display: inline;
-      line-height: 120%;
+      line-height: 140%;
     }
 
 
@@ -477,9 +498,16 @@ div.welcome-box2 {
       max-width: 72%;
       position: fixed;
       z-index: ;
-  
-  
     }
+    h3 {
+      font-family: "ppmori-regular", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 18px;
+      display: inline;
+      line-height: 125%;
+    }
+
 
     main {
       padding-left: 11rem;
@@ -517,6 +545,8 @@ div.welcome-box2 {
       position: fixed;
   
     }
+
+   
 
   
   }
@@ -656,17 +686,20 @@ div.welcome-box2 {
       display: block;
       justify-content: space-between; /* Distributes space between flex items */
       box-sizing: border-box;
+      height: auto;
     }
 
     div.welcome-box1 {
       flex: 5; /* Each box will grow equally to fill available space */
       max-width: 100%;
       padding-right: 0;
+      height: auto;
     }
     div.welcome-box2 {
       flex: 5; /* Each box will grow equally to fill available space */
       max-width: 100%;
       margin-right: 0;
+      height: auto;
     }
   
 
